[package]

authors = ["Christian Sdunek <me@systemcluster.me>"]
build = "build.rs"
categories = ["compression", "filesystem", "command-line-utilities"]
keywords = ["compression", "binary", "executable", "packer", "filesystem"]
description = "Packer for creating self-contained single-binary applications from executables and directories"
edition = "2021"
include = [
  "Cargo.toml",
  "src/**/*",
  "startpe.tar",
  "build.rs",
  "LICENSE",
]
license = "BSD-2-Clause"
name = "wrappe"
readme = "README.md"
repository = "https://github.com/Systemcluster/wrappe"
version = "1.0.1"

[[bin]]

name = "wrappe"
path = "src/main.rs"

[workspace]

members = [
  ".",
  "startpe",
]

[profile.release]

codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
panic = "abort"
strip = "symbols"

[dependencies]

staticfilemap = { version = "0.7.0", default-features = false, features = ["zstd", "multithread"] }
editpe = { version = "0.1.0", default-features = false }

clap = { version = "4.4.8", features = ["std", "color", "suggestions", "derive", "unicode", "wrap_help"] }
color-backtrace = "0.6.1"
console = "0.15.7"
indicatif = "0.17.7"
jwalk = "0.8.1"
num_cpus = "1.16.0"
path-slash = "0.2.1"
rand = "0.8.5"
rayon = "1.8.0"
sysinfo = "0.29.10"
twox-hash = { version = "1.6.3", default-features = false }
zerocopy = "0.7.26"
zstd = { version = "0.13.0", default-features = false, features = ["arrays", "zstdmt"] }

[build-dependencies]

jwalk = "0.8.1"
which = "5.0.0"
tar = "0.4.40"
