[package]

name = "wrappe"
description = "Packer for creating self-contained single-binary applications from executables and directories"
version = "1.0.5"
license = "BSD-2-Clause"
authors = ["Christian Sdunek <me@systemcluster.me>"]
categories = ["compression", "filesystem", "command-line-utilities"]
keywords = ["compression", "binary", "executable", "packer", "filesystem"]
edition = "2021"
rust-version = "1.77.2"
include = [
  "Cargo.toml",
  "src/**/*",
  "startpe.tar",
  "build.rs",
  "LICENSE",
]
build = "build.rs"
readme = "README.md"
repository = "https://github.com/Systemcluster/wrappe"

[[bin]]

name = "wrappe"
path = "src/main.rs"

[workspace]

members = [
  ".",
  "startpe",
]

[profile.release]

codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
panic = "abort"
strip = "symbols"

[profile.dev]

panic = "abort"
opt-level = 0

[dependencies]

staticfilemap = { version = "0.8.0", default-features = false, features = ["zstd", "multithread"] }
editpe = { version = "0.2.3", default-features = false, features = ["std", "images"] }

clap = { version = "=4.5.21", features = ["std", "color", "suggestions", "derive", "unicode", "wrap_help"] }
color-backtrace = "0.5.1"
console = "0.16.3"
indicatif = "0.18.4"
jwalk = "0.8.1"
path-slash = "0.2.1"
rand = "0.9.2"
rayon = "1.10.0"
rayon-core = "=1.12.1"
sysinfo = "0.32.1"
twox-hash = { version = "1.6.3", default-features = false }
zerocopy = "0.8.47"
zstd = { version = "0.13.3", default-features = false, features = ["zstdmt", "zdict_builder"] }
image = { version = "=0.25.6", default-features = false, features = ["ico", "jpeg", "png"] }

indexmap = "=2.11.4"

[build-dependencies]

jwalk = "0.8.1"
which = "8.0.2"
tar = "0.4.45"
