[package]

authors = ["Christian Sdunek <me@systemcluster.me>"]
description = "Runner for Packed Executables"
edition = "2021"
license = "BSD-2-Clause"
name = "startpe"
publish = false
repository = "https://github.com/Systemcluster/wrappe"
version = "1.0.3"

[[bin]]

name = "startpe"
path = "src/main.rs"

[features]

default = ["prefetch"]
prefetch = []

[profile.release]

codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
panic = "abort"
strip = "symbols"

[dependencies]

dirs = "5.0.1"
filetime = "0.2.23"
fslock = "0.2.1"
memchr = "2.7.2"
memmap2 = "0.9.4"
rayon = "1.10.0"
twox-hash = { version = "1.6.3", default-features = false }
zerocopy = { version = "0.7.32", features = ["derive"] }
zstd = { version = "0.13.1", default-features = false, features = [] }

[target.'cfg(windows)'.dependencies]

winapi = { version = "0.3.9", features = ["wincon", "libloaderapi"] }
