[package]

authors = ["Christian Sdunek <me@systemcluster.me>"]
description = "Runner for Packed Executables"
edition = "2021"
license = "BSD-2-Clause"
name = "startpe"
publish = false
repository = "https://github.com/Systemcluster/wrappe"
version = "1.0.3"

[[bin]]

name = "startpe"
path = "src/main.rs"

[features]

default = ["prefetch", "once"]
prefetch = []
once = ["dep:procfs"]

[profile.release]

codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
panic = "abort"
strip = "symbols"

[dependencies]

dirs = "5.0.1"
filetime = "0.2.23"
fslock-guard = "0.1.4"
memchr = "2.7.4"
memmap2 = "0.9.4"
rayon = "1.10.0"
twox-hash = { version = "1.6.3", default-features = false }
zerocopy = { version = "0.7.35", features = ["derive"] }
zstd = { version = "0.13.2", default-features = false, features = [] }

[target.'cfg(windows)'.dependencies]

windows-sys = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_Diagnostics",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]

procfs = { version = "0.16.0", default-features = false, optional = true }
